template-bkp/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: alpine
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: alpine
